syntax = "proto3";

package comicro.srv.user;

service UserService {
    rpc Register (User) returns (AuthResponse) {
    }
    rpc Call (Request) returns (Response) {
    }
    rpc Stream (StreamingRequest) returns (stream StreamingResponse) {
    }
    rpc PingPong (stream Ping) returns (stream Pong) {
    }
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message Error {
    int32 code = 1;
    string message = 2;
}


message AuthResponse {
    User user = 1;
    string token = 2;
    Error error = 3;
}

message Message {
    string say = 1;
}

message Request {
    string name = 1;
}

message Response {
    string msg = 1;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
